--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,37 +1,37 @@
-##Data Source
-#spring.datasource.url=jdbc:mysql://localhost:3306/demo
-#spring.datasource.username=root
-#spring.datasource.password=ChuanDo@13
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-##Hibernate
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.id.new_generator_mappings=true
-#spring.jpa.properties.hibernate.show.sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.properties.hibernate.hb2dll.auto=update
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-DEPLOY HEROKU Configuration#
-
-heroku-server
-spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=production
-spring.thymeleaf.mode=HTML
-logging.level.org.springframework=INFO
-server.port=${PORT:5000}
-spring.datasource.url=jdbc:mysql://b2b7aca6905744:4f2ca31f@eu-cdbr-west-03.cleardb.net/heroku_7f720569c3bcb94?reconnect=true&characterEncoding=UTF-8
-spring.datasource.username=b2b7aca6905744
-spring.datasource.password=4f2ca31f
+#Data Source
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.username=root
+spring.datasource.password=ChuanDo@13
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
-spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
+#Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.properties.hibernate.show.sql=true
 spring.jpa.properties.hibernate.format_sql=true
-debug=true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-app.jwtSecret=SecretKey
-app.jwtExpiration=86400
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hb2dll.auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#DEPLOY HEROKU Configuration#
+#
+#heroku-server
+#spring.jpa.hibernate.ddl-auto=update
+#spring.profiles.active=production
+#spring.thymeleaf.mode=HTML
+#logging.level.org.springframework=INFO
+#server.port=${PORT:5000}
+#spring.datasource.url=jdbc:mysql://b472b290b4ac99:5f5982c0@eu-cdbr-west-03.cleardb.net/heroku_5b5cf5337d116e3?reconnect=true&characterEncoding=UTF-8
+#spring.datasource.username=b472b290b4ac99
+#spring.datasource.password=5f5982c0
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.hikari.connection-timeout=30000
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#debug=true
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#app.jwtSecret=SecretKey
+#app.jwtExpiration=86400
